--- a/resources/view/pages/header.html
+++ b/resources/view/pages/header.html
@@ -1,15 +1,15 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-      <a class="navbar-brand" href="{{URL}}">Home</a>
-      <div class="collapse navbar-collapse">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="{{URL}}/pessoas">Pessoas</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{{URL}}/contatos">Contatos</a>
-          </li>
-        </ul>
-      </div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
+  <div class="container">
+    <a class="navbar-brand" href="{{URL}}">Home</a>
+    <div class="collapse navbar-collapse">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="{{URL}}/pessoas">Pessoas</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{URL}}/contatos">Contatos</a>
+        </li>
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
