--- a/resources/view/pages/personRegistration.html
+++ b/resources/view/pages/personRegistration.html
@@ -6,17 +6,15 @@
         <div class="form-group">
 
         </div>
-        <div class="form-group col-lg-6">
-            <labe>Nome:</labe>
-            <input type="text" class="form-control" name="name" maxlength="255" required>
+        <div class="form-group col-lg-6 mb-2">
+            <input type="text" class="form-control" name="name" maxlength="255" placeholder="Nome..." required>
         </div>
         <div class="form-group col-lg-2">
-            <labe>CPF:</labe>
-            <input type="text" class="form-control" name="name" maxlength="14" required>
+            <input type="text" class="form-control" name="cpf" maxlength="14" placeholder="CPF..." required>
         </div>
 
         <div class="form-group mt-3">
-            <button type="submit" class="btn btn-primary">Cadastrar</button>
+            <button type="submit" class="btn btn-primary">{{nameAction}}</button>
         </div>
     </form>
 
