Adicionada a variável que irá permitir manipular os registros

--- a/resources/view/pages/person.html
+++ b/resources/view/pages/person.html
@@ -2,8 +2,8 @@
     <td>{{name}}</td>
     <td>{{cpf}}</td>
     <td>
-        <a href="{{URL}}/pessoas/visualizar" class="btn btn-info text-white">Visualizar</a>
-        <a href="{{URL}}/pessoas/alterar" class="btn btn-warning text-white">Alterar</a>
-        <a href="{{URL}}/pessoas/excluir" class="btn btn-danger">Excluir</a>
+        <a href="{{URL}}/pessoas/visualizar/{{id}}" class="btn btn-info text-white">Visualizar</a>
+        <a href="{{URL}}/pessoas/alterar/{{id}}" class="btn btn-warning text-white">Alterar</a>
+        <a href="{{URL}}/pessoas/excluir/{{id}}" class="btn btn-danger">Excluir</a>
     </td>
 </tr>
