--- a/resources/view/pages/person/people.html
+++ b/resources/view/pages/person/people.html
@@ -5,9 +5,9 @@
     <table class="table table-striped table-bordered">
         <thead>
             <tr>
-                <th>Nome</th>
-                <th>CPF</th>
-                <th>Ações</th>
+                <th scope="col" class="col-6">Nome</th>
+                <th scope="col" >CPF</th>
+                <th scope="col" class="col-3">Ações</th>
             </tr>
         </thead>
         <tbody>
