--- a/resources/view/pages/person/person.html
+++ b/resources/view/pages/person/person.html
@@ -3,7 +3,7 @@
     <td>{{cpf}}</td>
     <td>
         <a href="{{URL}}/pessoas/visualizar/{{id}}" class="btn btn-info text-white">Visualizar</a>
-        <a href="{{URL}}/pessoas/alterar/{{id}}" class="btn btn-warning text-white">Alterar</a>
+        <a href="{{URL}}/pessoas/alterar/{{id}}/edit" class="btn btn-warning text-white">Alterar</a>
         <a href="{{URL}}/pessoas/excluir/{{id}}" class="btn btn-danger">Excluir</a>
     </td>
 </tr>
