Adicionado: visualizar, deletar e buscar

--- a/resources/view/pages/person/person.html
+++ b/resources/view/pages/person/person.html
@@ -4,6 +4,6 @@
     <td>
         <a href="{{URL}}/pessoas/visualizar/{{id}}" class="btn btn-info text-white">Visualizar</a>
         <a href="{{URL}}/pessoas/alterar/{{id}}/edit" class="btn btn-warning text-white">Alterar</a>
-        <a href="{{URL}}/pessoas/excluir/{{id}}" class="btn btn-danger">Excluir</a>
+        <a href="{{URL}}/pessoas/deletar/{{id}}/delete" class="btn btn-danger">Excluir</a>
     </td>
 </tr>
