--- a/resources/view/pages/person/people.html
+++ b/resources/view/pages/person/people.html
@@ -2,11 +2,26 @@
     <h1>{{title}}</h1>
     <p>{{description}}</p>
     <a href="{{URL}}/pessoas/cadastrar" class="btn btn-primary mb-4">Cadastrar Novo</a>
+
+    <form method="POST">
+        <div class="mb-3">
+            <div class="card-body">
+                <h5 class="card-title">Busque pessoas pelo nome:</h5>
+                <div class="input-group">
+                    <input type="text" class="form-control" name="search" value="{{search}}" placeholder="Exemplo: Luiz..." required>
+                    <div class="input-group-append">
+                        <button type="submit" class="btn btn-primary">Pesquisar</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </form>
+
     <table class="table table-striped table-bordered">
         <thead>
             <tr>
                 <th scope="col" class="col-6">Nome</th>
-                <th scope="col" >CPF</th>
+                <th scope="col">CPF</th>
                 <th scope="col" class="col-3">Ações</th>
             </tr>
         </thead>
