Adicionado os arquivos base

--- a/resources/view/pages/person/details.html
+++ b/resources/view/pages/person/details.html
@@ -8,12 +8,16 @@
         </div>
         <div class="form-group col-lg-6 mb-2">
             <label>Nome:</label>
-            <input type="text" class="form-control" name="name" maxlength="255" placeholder="Nome..." value="{{name}}" disabled>
+            <input type="text" class="form-control" name="name" maxlength="255" placeholder="Nome..." value="{{name}}"
+                disabled>
         </div>
         <div class="form-group col-lg-2">
             <label>CPF:</label>
-            <input type="text" class="form-control" name="cpf" maxlength="14" placeholder="CPF..." value="{{cpf}}" disabled>
+            <input type="text" class="form-control" name="cpf" maxlength="14" placeholder="CPF..." value="{{cpf}}"
+                disabled>
         </div>
     </form>
+    
+    <a href="{{URL}}{{path}}" class="btn btn-primary mt-4 mb-4">{{nameAction}}</a>
 
 </div>
