--- a/resources/view/pages/person/form.html
+++ b/resources/view/pages/person/form.html
@@ -7,10 +7,12 @@
 
         </div>
         <div class="form-group col-lg-6 mb-2">
-            <input type="text" class="form-control" name="name" maxlength="255" placeholder="Nome..." value="{{name}}" required>
+            <input type="text" class="form-control" name="name" maxlength="255" placeholder="Nome..." value="{{name}}"
+                required>
         </div>
         <div class="form-group col-lg-2">
-            <input type="text" class="form-control" name="cpf" maxlength="14" placeholder="CPF..." value="{{cpf}}" required>
+            <input type="text" class="form-control" name="cpf" maxlength="14" placeholder="CPF..." value="{{cpf}}"
+                required>
         </div>
 
         <div class="form-group mt-3">
