--- a/resources/view/pages/person/people.html
+++ b/resources/view/pages/person/people.html
@@ -8,7 +8,7 @@
             <div class="card-body">
                 <h5 class="card-title">Busque pessoas pelo nome:</h5>
                 <div class="input-group">
-                    <input type="text" class="form-control" name="search" value="{{search}}" placeholder="Exemplo: Luiz..." required>
+                    <input type="text" class="form-control" name="search" value="{{search}}" placeholder="Exemplo: Luiz...">
                     <div class="input-group-append">
                         <button type="submit" class="btn btn-primary">Pesquisar</button>
                     </div>
