--- a/resources/view/pages/contact/form.html
+++ b/resources/view/pages/contact/form.html
@@ -7,8 +7,13 @@
 
         </div>
         <div class="form-group col-lg-6 mb-2">
-            <label>Pessoa:</label>
-            {{componentPeople}}
+            <div class="mb-3">
+                <label for="personId" class="form-label">Pessoa:</label>
+                <select class="form-select" id="campo-lista" name="personId" required>
+                    <option selected disabled>Selecionar...</option>
+                    {{componentPerson}}
+                </select>
+            </div>
         </div>
         <div class="form-group col-lg-2">
             <label>Tipo do contato:</label>
