Corrigido o tamanho das colunas da consulta

--- a/resources/view/pages/contact/contacts.html
+++ b/resources/view/pages/contact/contacts.html
@@ -6,9 +6,10 @@
     <table class="table table-striped table-bordered">
         <thead>
             <tr>
-                <th scope="col">Pessoa</th>
-                <th scope="col">Tipo</th>
-                <th scope="col">Descrição</th>
+                <th scope="col" class="col-4">Pessoa</th>
+                <th scope="col" class="col-1">Tipo</th>
+                <th scope="col" class="col-4">Descrição</th>
+                <th scope="col" class="col-3">Ações</th>
             </tr>
         </thead>
         <tbody>
