Implementada a alteração de contatos

--- a/resources/view/pages/contact/form.html
+++ b/resources/view/pages/contact/form.html
@@ -10,7 +10,7 @@
             <div class="mb-3">
                 <label for="personId" class="form-label">Pessoa:</label>
                 <select class="form-select" id="campo-lista" name="personId" required>
-                    <option selected disabled>Selecionar...</option>
+                    <option {{selected}} disabled>Selecionar...</option>
                     {{componentPerson}}
                 </select>
             </div>
