Identado os formulários da aplicação

--- a/resources/view/pages/contact/details.html
+++ b/resources/view/pages/contact/details.html
@@ -8,18 +8,15 @@
         </div>
         <div class="form-group col-lg-6 mb-2">
             <label>Nome da Pessoa:</label>
-            <input type="text" class="form-control" name="name" maxlength="255" value="{{namePerson}}"
-                disabled>
+            <input type="text" class="form-control" name="name" maxlength="255" value="{{namePerson}}" disabled>
         </div>
         <div class="form-group col-lg-2">
             <label>Tipo do contato:</label>
-            <input type="text" class="form-control" name="cpf" maxlength="14" value="{{type}}"
-                disabled>
+            <input type="text" class="form-control" name="cpf" maxlength="14" value="{{type}}" disabled>
         </div>
         <div class="form-group col-lg-6">
             <label>Descrição:</label>
-            <input type="text" class="form-control" name="cpf" maxlength="14" value="{{descriptionContact}}"
-                disabled>
+            <input type="text" class="form-control" name="cpf" maxlength="14" value="{{descriptionContact}}" disabled>
         </div>
     </form>
 
